# affirmations-api

./: .coverage  .env-template  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  heroku.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
affirmations/: db.py  main.py  models.py
requirements/: base.txt  dev.txt
tests/: test_main.py
